CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(nether)
INCLUDE(FindPkgConfig)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

IF(NOT DEFINED SYSCONF_INSTALL_DIR)
    SET(SYSCONF_INSTALL_DIR "/etc")
ENDIF(NOT DEFINED SYSCONF_INSTALL_DIR)

IF(NOT DEFINED SYSTEMD_UNIT_DIR)
    SET(SYSTEMD_UNIT_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
ENDIF(NOT DEFINED SYSTEMD_UNIT_DIR)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(conf)