FILE (GLOB NETHER_SOURCES *.cpp)
FILE (GLOB VASUM_LOGGER logger/*.cpp)
PKG_CHECK_MODULES (CYNARA cynara-client-async)
PKG_CHECK_MODULES (NETFILTER libnetfilter_queue REQUIRED)
PKG_CHECK_MODULES (LOGGER libsystemd-journal)
PKG_CHECK_MODULES (AUDIT libaudit)
FIND_PACKAGE(audit)
FIND_PACKAGE(Boost)

ADD_EXECUTABLE(nether ${NETHER_SOURCES} ${VASUM_LOGGER})

INCLUDE_DIRECTORIES(../include
	${EXTERNAL_INCLUDE_DIRS}
	${CYNARA_INCLUDE_DIRS}
	${NETFILTER_INCLUDE_DIRS}
	${LOGGER_INCLUDE_DIRS}
)

if(CYNARA_FOUND)
	ADD_DEFINITIONS (-DHAVE_CYNARA=1)
endif()

if(LOGGER_FOUND)
	ADD_DEFINITIONS (-DHAVE_SYSTEMD_JOURNAL=1)
endif()

if(CMAKE_BUILD_TYPE MATCHES DEBUG)
	ADD_DEFINITIONS (-D_DEBUG=1)
endif(CMAKE_BUILD_TYPE MATCHES DEBUG)

if(AUDIT_FOUND)
	ADD_DEFINITIONS (-DHAVE_AUDIT=1)
	INCLUDE_DIRECTORIES (${AUDIT_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(nether ${AUDIT_LIBRARY})
endif()

if(Boost_FOUND)
	ADD_DEFINITIONS(-DHAVE_BOOST=1)
endif()

TARGET_LINK_LIBRARIES(nether ${CYNARA_LIBRARIES}
	${NETFILTER_LIBRARIES}
	${LOGGER_LIBRARIES}
)

ADD_DEFINITIONS(-DNETHER_RULES_PATH="${CMAKE_INSTALL_DIR}/etc/nether/nether.rules"
	-DNETHER_POLICY_FILE="${CMAKE_INSTALL_DIR}/etc/nether/nether.rules"
)

INSTALL(TARGETS nether RUNTIME DESTINATION bin)
